Updated Challenge_Index.html file

--- a/Earthquake_Challenge/index.html
+++ b/Earthquake_Challenge/index.html
@@ -27,9 +27,9 @@
 
        
 
-        <!-- API key -->
+        <!-- API key. -->
         <script type="text/javascript" src="static/js/config.js"></script>
-        <!-- Our JavaScript -->
+        <!-- Our JavaScript. -->
         <script type="text/javascript" src="static/js/challenge_logic.js"></script>
 
     </div>
